# rundeck-mcp

./: .env.example  .gitignore  .tool-versions  CLAUDE.md  Makefile  PRD.md  README.md  pyproject.toml  server.json
rundeck_mcp/: __init__.py  __main__.py  client.py  server.py  utils.py
rundeck_mcp/models/: __init__.py  base.py  context.py  executions.py  jobs.py
rundeck_mcp/tools/: __init__.py  executions.py  jobs.py
scripts/: install.sh
tests/: test_executions.py  test_jobs.py
